# File-IO-Buffering-Microbenchmark

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/: fileio.h
src/: fileio.c
